k8s/db/postgresql-ha.yaml
---
# Source: postgresql-ha/templates/pgpool/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: news-postgresql-ha-pgpool
  namespace: "fake-news"
  labels:
    app.kubernetes.io/instance: news
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.5.0
    helm.sh/chart: postgresql-ha-16.1.2
    app.kubernetes.io/component: pgpool
    role: data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: news
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: pgpool
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: postgresql-ha/templates/postgresql/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: news-postgresql-ha-postgresql
  namespace: "fake-news"
  labels:
    app.kubernetes.io/instance: news
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.5.0
    helm.sh/chart: postgresql-ha-16.1.2
    app.kubernetes.io/component: postgresql
    role: data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: news
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: postgresql
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: postgresql-ha/templates/pgpool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-postgresql-ha-pgpool
  namespace: "fake-news"
  labels:
    app.kubernetes.io/instance: news
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 4.6.2
    helm.sh/chart: postgresql-ha-16.1.2
    app.kubernetes.io/component: pgpool
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "postgresql"
      port: 5432
      targetPort: postgresql
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: news
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/component: pgpool
---
# Source: postgresql-ha/templates/postgresql/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-postgresql-ha-postgresql-headless
  namespace: "fake-news"
  labels:
    app.kubernetes.io/instance: news
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.5.0
    helm.sh/chart: postgresql-ha-16.1.2
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: false
  ports:
    - name: "postgresql"
      port: 5432
      targetPort: postgresql
      protocol: TCP
  selector:
    app.kubernetes.io/instance: news
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/component: postgresql
    role: data
---
# Source: postgresql-ha/templates/postgresql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-postgresql-ha-postgresql
  namespace: "fake-news"
  labels:
    app.kubernetes.io/instance: news
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.5.0
    helm.sh/chart: postgresql-ha-16.1.2
    app.kubernetes.io/component: postgresql
spec:
  type: ClusterIP
  ports:
    - name: "postgresql"
      port: 5432
      targetPort: postgresql
      protocol: TCP
  selector:
    app.kubernetes.io/instance: news
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/component: postgresql
    role: data
---
# Source: postgresql-ha/templates/pgpool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-postgresql-ha-pgpool
  namespace: "fake-news"
  labels:
    app.kubernetes.io/instance: news
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 4.6.2
    helm.sh/chart: postgresql-ha-16.1.2
    app.kubernetes.io/component: pgpool
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: news
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: pgpool
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: news
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql-ha
        app.kubernetes.io/version: 4.6.2
        helm.sh/chart: postgresql-ha-16.1.2
        app.kubernetes.io/component: pgpool
      annotations:
    spec:
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: news
                    app.kubernetes.io/name: postgresql-ha
                    app.kubernetes.io/component: pgpool
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: news-postgresql-ha
      # Auxiliary vars to populate environment variables
      containers:
        - name: pgpool
          image: docker.io/bitnami/pgpool:4.6.2-debian-12-r7
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /opt/bitnami/scripts/pgpool/healthcheck.sh
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - bash
                - -ec
                - 'PGPASSWORD=$(< $PGPOOL_POSTGRES_PASSWORD_FILE) psql -U "postgres" -d "fakenewsdb" -h /opt/bitnami/pgpool/tmp -tA -c "SELECT 1" >/dev/null'
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/etc
              subPath: app-etc-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/logs
              subPath: app-logs-dir
            - name: postgresql-creds
              subPath: pgpool-password
              mountPath: /opt/bitnami/pgpool/secrets/pgpool-password
            - name: pgpool-creds
              subPath: admin-password
              mountPath: /opt/bitnami/pgpool/secrets/admin-password
            - name: pgpool-creds
              subPath: sr-check-password
              mountPath: /opt/bitnami/pgpool/secrets/sr-check-password
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: postgresql-creds
          secret:
            secretName: postgresql-ha-secret
            items:
              - key: password
                path: pgpool-password
        - name: pgpool-creds
          secret:
            secretName: news-postgresql-ha-pgpool
---
# Source: postgresql-ha/templates/postgresql/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: news-postgresql-ha-postgresql
  namespace: "fake-news"
  labels:
    app.kubernetes.io/instance: news
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.5.0
    helm.sh/chart: postgresql-ha-16.1.2
    app.kubernetes.io/component: postgresql
    role: data
spec:
  replicas: 3
  podManagementPolicy: "Parallel"
  serviceName: news-postgresql-ha-postgresql-headless
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: news
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: postgresql
      role: data
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: news
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql-ha
        app.kubernetes.io/version: 17.5.0
        helm.sh/chart: postgresql-ha-16.1.2
        app.kubernetes.io/component: postgresql
        role: data
      annotations:
    spec:
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: news
                    app.kubernetes.io/name: postgresql-ha
                    app.kubernetes.io/component: postgresql
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: news-postgresql-ha
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql-repmgr:17.5.0-debian-12-r17
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          lifecycle:
            preStop:
              exec:
                command:
                  - /pre-stop.sh
                  - "25"
          # Auxiliary vars to populate environment variables
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - bash
                - -ec
                - 'ps waux | grep "data standby clone" | grep -v grep || PGPASSWORD=$(< $POSTGRES_PASSWORD_FILE) psql -w -U "postgres" -d "fakenewsdb" -h 127.0.0.1 -p 5432 -c "SELECT 1"'
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - bash
                - -ec
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/repmgr/conf
              subPath: repmgr-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/repmgr/tmp
              subPath: repmgr-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/repmgr/logs
              subPath: repmgr-logs-dir
            - name: postgresql-creds
              subPath: password
              mountPath: /opt/bitnami/postgresql/secrets/password
            - name: postgresql-creds
              subPath: repmgr-password
              mountPath: /opt/bitnami/postgresql/secrets/repmgr-password
            - name: pgpool-creds
              subPath: sr-check-password
              mountPath: /opt/bitnami/postgresql/secrets/sr-check-password
            - name: data
              mountPath: /bitnami/postgresql
            - name: hooks-scripts
              mountPath: /pre-stop.sh
              subPath: pre-stop.sh
            - name: hooks-scripts
              mountPath: /readiness-probe.sh
              subPath: readiness-probe.sh
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: hooks-scripts
          configMap:
            name: news-postgresql-ha-postgresql-hooks-scripts
            defaultMode: 0755
        - name: postgresql-creds
          secret:
            secretName: postgresql-ha-secret
        - name: pgpool-creds
          secret:
            secretName: news-postgresql-ha-pgpool
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
